kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trac-tcm
  name: trac-tcm
  namespace: trac-tcm
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: trac-tcm
  template:
    metadata:
      namespace: trac-tcm
      labels:
        app: trac-tcm
    spec:
      hostname: mongodb
      containers:
      - image: mongo:4.4
        name: mongodb
        imagePullPolicy: IfNotPresent
        resources: 
          limits:
            cpu: "0.5"  
            memory: 256Mi
        volumeMounts:
        - mountPath: "/data/db"
          name: mongodb
        ports:
        - containerPort: 27017
      

      - image: ghcr.io/jasonhanks/trac-tcm/trac-tcm:latest
        name: trac-tcm
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000 # React UI
        - containerPort: 3001 # Express API server
        resources: 
          limits:
            cpu: "1"
            memory: 5122Mi
        
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongodb
