kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trac-tcm
  namespace: trac-tcm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: trac-tcm.example.com
    http:
      paths:
      - backend:
          service:
            name: trac-tcm
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: trac-tcm-mongo.example.com
    http:
      paths:
      - backend:
          service:
            name: trac-tcm
            port:
              number: 8081
        path: /
        pathType: Prefix
